<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Android Services Library</string>
    <string name="permlab_accessAdServicesTopics">access AdServices Topics API</string>
    <string name="permdesc_accessAdServicesTopics">Allows an application to access AdServices Topics API.</string>
    <string name="permlab_accessAdServicesAttribution">access AdServices Attribution APIs</string>
    <string name="permdesc_accessAdServicesAttribution">Allows an application to access AdServices Attribution APIs.</string>
    <string name="permlab_accessAdServicesCustomAudience">access AdServices Custom Audience API</string>
    <string name="permdesc_accessAdServicesCustomAudience">Allows an application to access AdServices Custom Audience API.</string>
    <string name="permlab_accessAdServicesAdSelection">access AdServices Ad Selection API</string>
    <string name="permdesc_accessAdServicesAdSelection">Allows an application to access AdServices Ad Selection API.</string>
    <string name="permlab_accessAdServicesProtectedSignals">access AdServices Protected Signals API</string>
    <string name="permdesc_accessAdServicesProtectedSignals">Allows an application to access AdServices Protected Signals API.</string>
    <string name="permlab_accessAdServicesAdId">Access to AdId API</string>
    <string name="permdesc_accessAdServicesAdId">Allows an application to access AdId API.</string>
    <string name="permlab_accessAdServicesConsent">access AdServices Consent API</string>
    <string name="permdesc_accessAdServicesConsent">Allows an application to access AdServices Consent API.</string>
    <string name="permlab_adServicesAccessAdId">Access to Ad ID API</string>
    <string name="permdesc_adServicesAccessAdId">Allows an application to access Ad ID API.</string>
    <string name="permlab_adServicesAccessAdServicesCobaltUpload">Access to AdServices Cobalt Upload API</string>
    <string name="permdesc_adServicesAccessAdServicesCobaltUpload">Allows an application to access AdServices Cobalt Upload API.</string>
    <string name="permlab_adServicesAccessAppSetId">Access to App Set ID API</string>
    <string name="permdesc_adServicesAccessAppSetId">Allows an application to access App Set ID API.</string>
    <string name="permlab_adServicesAccessConsentService">Access to Consent Service API</string>
    <string name="permdesc_adServicesAccessConsentService">Allows an application to access Consent Service API.</string>
    <string name="permlab_modifyAdServicesState">Access to AdService’s enablement state modification API</string>
    <string name="permdesc_modifyAdServicesState">Allows an application to access AdService’s enablement state modification API.</string>
    <string name="permlab_accessAdServicesState">Access to AdService’s enablement state API</string>
    <string name="permdesc_accessAdServicesState">Allows an application to access AdService’s enablement state API.</string>
    <string name="permlab_accessAdServicesManager">Access to AdServicesManager’s APIs</string>
    <string name="permdesc_accessAdServicesManager">Allows an application to access AdServicesManager’s APIs.</string>
    <string name="permlab_updateAdservicesAdId">Access to AdService’s update AdId API.</string>
    <string name="permdesc_updateAdservicesAdId">Allows an application to access AdService’s update AdId API.</string>
    <string name="app_label">Ad Privacy</string>
    <string name="notificationUI_notification_title_eu">Join Android’s ads privacy beta</string>
    <string name="notificationUI_notification_content_eu">Android is exploring more private ways for apps to show you ads</string>
    <string name="notificationUI_notification_cta_eu">Learn more</string>
    <string name="notificationUI_header_title_eu">Android’s ads privacy beta</string>
    <string name="notificationUI_container1_title_eu">What’s new</string>
    <string name="notificationUI_container1_body_text_eu">The new privacy features in the Privacy Sandbox let apps show you relevant ads, but restrict what those apps can learn about your activities on websites and apps from other developers.</string>
    <string name="notificationUI_container1_control_text_eu">How it works</string>
    <string name="notificationUI_container2_title_eu">How to participate</string>
    <string name="notificationUI_container2_body_text_eu">Turning on the beta allows apps to test these new, more private ways to show you ads. You can turn off the beta any time in your privacy settings.</string>
    <string name="notificationUI_left_control_button_text_eu">No thanks</string>
    <string name="notificationUI_right_control_button_text_eu">Turn On</string>
    <string name="notificationUI_more_button_text">More</string>
    <string name="notificationUI_left_control_button_text" translatable="false">@string/notificationUI_confirmation_left_control_button_text</string>
    <string name="notificationUI_right_control_button_text">Got it</string>
    <string name="notificationUI_you_can_change_in_privacy_settings_v2" translatable="false">@string/notificationUI_you_can_change_in_privacy_settings</string>
    <string name="settingsUI_blocked_topics_title">Interests you’ve blocked</string>
    <string name="settingsUI_reset_topics_title">Reset all interests</string>
    <string name="settingsUI_measurement_switch_title">Allow ad measurement</string>
    <string name="settingsUI_measurement_view_intro_text">Apps and advertisers can request information from Android that helps them measure the performance of their ads.\n\nAd measurement data is deleted regularly from your device.</string>
    <string name="settingsUI_measurement_view_reset_title">Reset measurement data</string>
    <string name="settingsUI_measurement_view_footer_text">Android protects your privacy by limiting the information apps can share with one another. Reports are sent with a delay to protect your identity.\n\nYour browser may have a similar setting. If ad measurement is on for both Android and your browser, a company may be able to measure the effectiveness of an ad between apps you use and sites you visit. Your browsing history is kept private on your device.\n\nLearn more about how Android protects your data in our <a href="https://policies.google.com/privacy">Privacy Policy</a>.</string>
    <string name="settingsUI_topics_ga_title">Ad topics</string>
    <string name="settingsUI_apps_ga_title">App-suggested ads</string>
    <string name="settingsUI_measurement_ga_title" translatable="false">@string/settingsUI_main_view_info_text8</string>
    <string name="settingsUI_main_view_fragment_footer"><b>Ad topics</b>\nAndroid notes topics of interest based on the apps you’ve used recently and how frequently you use them.\n\n<b>App-suggested ads</b>\nApps you use can also determine what you like based on how you use them.\n\n<b>Ad measurement</b>\nApps you use can ask Android for information to help them measure the performance of their ads. Android lets apps collect limited types of data.</string>
    <string name="settingsUI_topics_view_ga_subtitle">Topics of interest are based on the apps you’ve used recently, and are used by apps to show you personalized ads.\n\nYou can block topics you don’t want shared with apps. Android also auto-deletes topics regularly.\n\nWhile this feature can be turned on, you may not see a list of topics until this feature is fully available and apps start using it.</string>
    <string name="settingsUI_topics_switch_title">Allow ad topics</string>
    <string name="settingsUI_blocked_topics_ga_title">Ad topics you blocked</string>
    <string name="settingsU_topics_view_footer">Android notes topics of interest based on the apps you’ve used in the last few weeks.\n\nLater, an app you use can ask Android for your topics to personalize the ads you see. Android shares up to 3 topics while protecting your identity and information about your app usage.\n\nAndroid auto-deletes topics regularly. As you continue using apps, a topic might reappear on the list. Or you can block topics you don’t want Android to share with apps.\n\nIn your apps, an ad you see may be personalized, depending on this setting, the app-suggested ads setting, your advertising ID settings, and whether the app you’re using personalizes ads.</string>
    <string name="settingsUI_topics_view_fragment_no_topics_ga_text">No topics to show right now.</string>
    <string name="notificationUI_pas_header_title" translatable="false">@string/notificationUI_pas_notification_title</string>
    <string name="notificationUI_pas_body_main">Ad privacy features help limit what apps can learn about you when they show you personalized ads.</string>
    <string name="notificationUI_pas_subtitle1" translatable="false">@string/settingsUI_apps_ga_title</string>
    <string name="notificationUI_pas_body1">Apps and their advertising partners can use your activity across other apps on this device to personalize ads while still helping keep your identity private and secure.</string>
    <string name="notificationUI_pas_expand_button_text1">More about app-suggested ads</string>
    <string name="notificationUI_pas_subtitle2" translatable="false">@string/settingsUI_main_view_info_text8</string>
    <string name="notificationUI_pas_body2">Limited types of data are shared between apps to understand the performance of their ads, such as the time of day an ad was shown to you.</string>
    <string name="notificationUI_pas_expand_button_text2">More about ad measurement</string>
    <string name="notificationUI_pas_msmt_dropdown_subtitle1">What data is used?</string>
    <string name="notificationUI_pas_msmt_body1">Apps you use can ask Android for information that helps them measure the performance of their ads. Android helps protect your privacy by limiting the information apps can share with one another.</string>
    <string name="notificationUI_pas_msmt_dropdown_subtitle2">How is my identity protected?</string>
    <string name="notificationUI_pas_msmt_body2">Android uses multiple privacy measures such as aggregation and noising data to limit the information apps can share with one another and help protect your identity.\n\nAd measurement data is also deleted regularly from your device.</string>
    <string name="notificationUI_pas_learn_more_msmt_link"><a href="https://support.google.com/android?p=ad_measurement">Learn more about how Android helps protect your privacy</a></string>
    <string name="notificationUI_pas_app_dropdown_subtitle1" translatable="false">@string/notificationUI_pas_msmt_dropdown_subtitle1</string>
    <string name="notificationUI_pas_app_body1">Your app activity can be used to suggest ads.</string>
    <string name="notificationUI_pas_app_dropdown_subtitle2">How do apps use this data?</string>
    <string name="notificationUI_pas_app_body2">Apps can securely store this information so that it can only be used by their advertising partners to personalize ads on other apps. For example, if you regularly use cooking apps, you may see ads for grocery delivery services or related content in other apps.</string>
    <string name="notificationUI_pas_app_body2_part2" translatable="false">@string/notificationUI_pas_combined_dropdown_body6</string>
    <string name="notificationUI_pas_app_dropdown_subtitle3">How can I manage this data?</string>
    <string name="notificationUI_pas_app_body3">You can block specific apps from sharing your activity with advertising partners. You can reset or turn app-suggested ads off at any time in your privacy settings. Android also auto-deletes this data regularly.</string>
    <string name="notificationUI_pas_leanr_more_link"><a href="https://support.google.com/android?p=manage_appsuggested_ads">Learn more about how Android helps protect your privacy</a></string>
    <string name="ic_main_view_ga_image_description">Colorful illustration of a lock inside a circle</string>
</resources>