<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.android.settingslib.widget.TopIntroPreference
        android:key="topics_ga_introduction"
        android:title="@string/settingsUI_topics_view_ga_subtitle" />

    <SwitchPreferenceCompat
        android:key="topics_switch_bar"
        android:title="@string/settingsUI_topics_switch_title" />
    <!-- no topics section -->
    <PreferenceCategory
        android:key="no_topics_message" >
    <com.android.settingslib.widget.IntroPreference
        android:key="no_topics_state"
        android:icon="@drawable/ic_placeholder_icon_for_empty_topics_list"
        android:summary="@string/settingsUI_topics_view_fragment_no_topics_ga_text" />

    <com.android.settingslib.widget.ButtonPreference
        android:key="blocked_topics_when_empty_state_button"
        android:title="@string/settingsUI_blocked_topics_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="topics_list" />

    <PreferenceCategory
        android:key="empty_topics_hidden_section" >
        <Preference
            android:key="blocked_topics_button"
            android:title="@string/settingsUI_blocked_topics_ga_title"
            android:icon="@drawable/ic_chevron_right_24dp" />
        <Preference
            android:key="reset_topics_button"
            android:title="@string/settingsUI_reset_topics_title"
            android:icon="@drawable/ic_restart_alt_24dp" />
    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="topics_view_ga_footer"
        android:title="@string/settingsU_topics_view_footer" />
</PreferenceScreen>