<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2024 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ScrollView
        android:id="@+id/notification_fragment_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <LinearLayout
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/adservices_content_horizontal_padding"
            android:paddingEnd="@dimen/adservices_content_horizontal_padding"
            android:paddingBottom="@dimen/adservices_content_padding"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            style="@style/NotificationContainer">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/adservices_content_3x_padding"
                    android:layout_marginStart="0dp"
                    android:src="@drawable/ic_android_icon"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/notification_title"
                    android:text="@string/notificationUI_pas_header_title"
                    style="@style/MainStyle.H1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/adservices_content_two_thirds_padding"
                android:orientation="vertical"
                android:animateLayoutChanges="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/adservices_content_two_thirds_padding"
                    android:src="@drawable/ic_main_view_ga_image"
                    android:contentDescription="@string/ic_main_view_ga_image_description"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/adservices_content_half_padding"
                    android:text="@string/notificationUI_pas_body_main"
                    style="@style/MainStyle.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notificationUI_pas_subtitle1"
                    style="@style/MainStyle.Body1Bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/notificationUI_pas_body1"
                    style="@style/MainStyle.Body1" />

                <TextView
                    android:id="@+id/how_it_works_expander"
                    android:drawableEnd="@drawable/ic_expand"
                    android:layout_marginTop="@dimen/adservices_content_two_thirds_padding"
                    android:text="@string/notificationUI_pas_expand_button_text1"
                    style="@style/MainStyle.Body1" />
                <LinearLayout
                    android:id="@+id/how_it_works_expanded_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" >
                    <TextView
                        android:drawableStart="@drawable/ic_bullet_point"
                        android:drawablePadding="@dimen/adservices_ic_bullet_point_padding"
                        android:text="@string/notificationUI_pas_app_dropdown_subtitle1"
                        style="@style/MainStyle.Body1Bold" />
                    <TextView
                        android:text="@string/notificationUI_pas_app_body1"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="@dimen/adservices_content_horizontal_two_thirds_padding"
                        style="@style/MainStyle.Body1" />
                    <TextView
                        android:drawableStart="@drawable/ic_bullet_point"
                        android:drawablePadding="@dimen/adservices_ic_bullet_point_padding"
                        android:text="@string/notificationUI_pas_app_dropdown_subtitle2"
                        style="@style/MainStyle.Body1Bold" />
                    <TextView
                        android:text="@string/notificationUI_pas_app_body2"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="@dimen/adservices_content_horizontal_two_thirds_padding"
                        style="@style/MainStyle.Body1" />
                    <TextView
                        android:id="@+id/notificationUI_pas_app_body2_part2"
                        android:text="@string/notificationUI_pas_app_body2_part2"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="@dimen/adservices_content_horizontal_two_thirds_padding"
                        style="@style/MainStyle.Body1" />
                    <TextView
                        android:drawableStart="@drawable/ic_bullet_point"
                        android:drawablePadding="@dimen/adservices_ic_bullet_point_padding"
                        android:text="@string/notificationUI_pas_app_dropdown_subtitle3"
                        style="@style/MainStyle.Body1Bold" />
                    <TextView
                        android:text="@string/notificationUI_pas_app_body3"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="@dimen/adservices_content_horizontal_two_thirds_padding"
                        style="@style/MainStyle.Body1" />
                    <TextView
                        android:id="@+id/learn_more_from_privacy_policy1"
                        android:text="@string/notificationUI_pas_leanr_more_link"
                        style="@style/MainStyle.Body1" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notificationUI_pas_subtitle2"
                    style="@style/MainStyle.Body1Bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/notificationUI_pas_body2"
                    style="@style/MainStyle.Body1" />

                <TextView
                    android:id="@+id/how_it_works_expander2"
                    android:drawableEnd="@drawable/ic_expand"
                    android:layout_marginTop="@dimen/adservices_content_two_thirds_padding"
                    android:text="@string/notificationUI_pas_expand_button_text2"
                    style="@style/MainStyle.Body1" />

                <LinearLayout
                    android:id="@+id/how_it_works_expanded_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" >
                    <TextView
                        android:drawableStart="@drawable/ic_bullet_point"
                        android:drawablePadding="@dimen/adservices_ic_bullet_point_padding"
                        android:text="@string/notificationUI_pas_msmt_dropdown_subtitle1"
                        style="@style/MainStyle.Body1Bold" />
                    <TextView
                        android:text="@string/notificationUI_pas_msmt_body1"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="@dimen/adservices_content_horizontal_two_thirds_padding"
                        style="@style/MainStyle.Body1" />
                    <TextView
                        android:drawableStart="@drawable/ic_bullet_point"
                        android:drawablePadding="@dimen/adservices_ic_bullet_point_padding"
                        android:text="@string/notificationUI_pas_msmt_dropdown_subtitle2"
                        style="@style/MainStyle.Body1Bold" />
                    <TextView
                        android:text="@string/notificationUI_pas_msmt_body2"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="@dimen/adservices_content_horizontal_two_thirds_padding"
                        style="@style/MainStyle.Body1" />
                    <TextView
                        android:id="@+id/learn_more_from_privacy_policy2"
                        android:text="@string/notificationUI_pas_learn_more_msmt_link"
                        style="@style/MainStyle.Body1" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/adservices_content_padding"
                android:text="@string/notificationUI_you_can_change_in_privacy_settings_v2"
                style="@style/MainStyle.Body1" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/adservices_divider_height"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            style="@style/NotificationButtonContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/leftControlButton"
                style="@style/MainStyle.PrimaryButtonNegative"
                android:text="@string/notificationUI_left_control_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <Button
                android:id="@+id/rightControlButton"
                style="@style/MainStyle.PrimaryButton"
                android:text="@string/notificationUI_right_control_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
