<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.android.settingslib.widget.TopIntroPreference
        android:title="@string/settingsUI_measurement_view_intro_text" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="measurement_switch_bar"
        android:title="@string/settingsUI_measurement_switch_title" />

    <PreferenceCategory>
        <Preference
            android:key="measurement_reset_button"
            android:icon="@drawable/ic_restart_alt_24dp"
            android:title="@string/settingsUI_measurement_view_reset_title" />
    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="measurement_footer"
        android:title="@string/settingsUI_measurement_view_footer_text" />
</PreferenceScreen>
