<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.android.adservices.ui.settings.preferences.ImageViewPreference
        android:key="main_view_image"
        app:layout="@layout/icon_preference_layout"
        android:selectable="false"/>
    <PreferenceCategory
        android:key="privacy_sandbox_controls">
        <Preference
            android:key="topics_preference"
            android:title="@string/settingsUI_topics_ga_title" />
        <Preference
            android:key="apps_preference"
            android:title="@string/settingsUI_apps_ga_title" />
        <Preference
            android:key="measurement_preference"
            android:title="@string/settingsUI_measurement_ga_title" />
    </PreferenceCategory>
    <com.android.settingslib.widget.FooterPreference
        android:key="main_view_footer"
        android:title="@string/settingsUI_main_view_fragment_footer" />
</PreferenceScreen>